# fetch-data-from-steam

./: Cargo.toml  README.md
.github/workflows/: rust-lint-and-test.yml
src/: cli_output.rs  config.rs  main.rs  steam_api.rs
